Homework Week 1 khuram

--- a/html-css/week1/style.css
+++ b/html-css/week1/style.css
@@ -58,7 +58,7 @@
 
 /* Setting properties for whole body */
 body{
-    background-image: url(../jonathan-kemper-zSCHyhiRSeQ-unsplash.jpg);
+    background-image: url(jonathan-kemper-zSCHyhiRSeQ-unsplash.jpg);
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
